# sy-codex-helper

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: GITHUB_RELEASE.md  codex-config-schema.md
docs/superpowers/plans/: 2026-07-05-inline-update-download.md  2026-07-08-v0.2.0-simple-provider-ui.md
docs/superpowers/specs/: 2026-07-07-v0.2.0-simple-provider-ui-design.md
release/: latest.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config_writer.rs  diagnostics.rs  feedback.rs  installer.rs  lib.rs  main.rs  native_menu.rs  storage.rs  updater.rs
src/components/: AdvancedSettings.tsx  CompleteStep.tsx  FeedbackStep.tsx  InstallStep.tsx  ProviderStep.tsx  StyleSettingsStep.tsx  ToolStep.tsx
src/lib/: defaults.test.ts  defaults.ts  finalPackageGuidance.test.js  mirror.test.ts  mirror.ts  provider.test.ts  provider.ts  providerPresets.test.ts  providerPresets.ts  updates.test.ts  updates.ts  wizard.test.ts  wizard.ts
