[package]
name = "codex-manager"
version = "0.2.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
keyring = "3.6.3"
dirs = "6.0.0"
sha2 = "0.10"
tungstenite = { version = "0.28", default-features = false, features = ["handshake"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_System_Com", "Win32_UI_Shell"] }

[dev-dependencies]
tempfile = "3"
